Bug 631473 - Don't consume mouse scroll events outside arrow panels on OS X. r=mstange r=enndeakin